# OpenPilot

./: ._CMakeLists.txt  .gitignore  .ninja_log  CMakeLists.txt  OpenPilot  README.md  build.ninja
Documentaton/: README.MD
include/: ._core.hpp  auto.hpp  core.hpp
include/autopilot/: ._system.hpp  control.hpp  lua_engine.hpp  navigation.hpp  sensors.hpp  system.hpp  telemetry.hpp
include/car/: car_ignition.hpp
include/car_electric/: car_ignition.hpp
include/ci_electric/: power.hpp
scripts/: mission.lua
src/: control.cpp  core.cpp  lua_engine.cpp  main.cpp  navigation.cpp  sensors.cpp  system.cpp  telemetry.cpp
src/car_electric/: ignition.cpp
src/ci_electric/: power.cpp
